--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -11,8 +11,8 @@ favicon: /images/favicon-isomer.ico
 agency-logo: /images/isomer-logo.svg
 
 # Hero Banner
-hero-title: Hero title
-hero-subtitle: Hero subtitle
+hero-title: 28 MAY 2019
+hero-subtitle: Suntec Singapore, Convention & Exhibition Centre, Nicoll Room 1, Level 3
 hero-banner: /images/hero-banner.png
 
 #Call to Action Button
