--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -16,11 +16,11 @@ hero-banner: /images/hero-banner.png
 key-highlights:
   - title: RSVP NOW
     description: Link to RSVP page
-    url: https://google.com
+    url: https://rsvp.govtechstack.sg
     external: true
   - title: STACK-X: CLOUD 2018
     description: Past 2018 page internal
-    url: https://yahoo.com
+    url: https://govtechstack.sg
     external: true
   - title: PAST VIDEO ARCHIVES
     description: Youtubeyoutube
