--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -26,7 +26,7 @@ key-highlights:
     description: STACK-X: Cloud 2018 Video Highlights
     url: https://www.youtube.com/watch?v=W50PMn-5dzw&list=PLEpmxnWUCornW_6agUoJvtWJ-gKumhgJx
 
-resources-title: Resources
-resources-subtitle: Be in the know
+resources-title: About
+resources-subtitle: STACK-X: CLoud 2019
 resources-more-button: View the Speakers' Bio
 resources-more-button-url: /speakers-bio
