--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -28,5 +28,9 @@ key-highlights:
 
 resources-title: About
 resources-subtitle: STACK-X: CLoud 2019
+  
+**STACK-X: Cloud** is a half-day technology event organised by the Government Technology Agency to share government commercial cloud policy and playbook with developers and technologists from the public and private sectors.  
+Attendees will also learn about how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
+  
 resources-more-button: View the Speakers' Bio
 resources-more-button-url: /speakers-bio
