--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -25,6 +25,9 @@ key-highlights:
   - title: Video Gallery
     description: STACK-X: Cloud 2018 Video Highlights
     url: https://www.youtube.com/watch?v=W50PMn-5dzw&list=PLEpmxnWUCornW_6agUoJvtWJ-gKumhgJx
+  - title: Speakers' Bio
+    description: STACK-X: Cloud 2019 Featured Speakers 
+    url: /speakers-bio
 
 resources-title: About
 resources-subtitle: STACK-X: CLoud 2019
