--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: STACK-X: Cloud
-title-abbreviated: STACK-X: Cloud
+title: "STACK-X: Cloud"
+title-abbreviated: "STACK-X: Cloud"
 description: >- # this means to ignore newlines until "baseurl:"
   Description
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
