--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -30,12 +30,17 @@ key-highlights:
     url: /speakers-bio
 
 resources-title: About
-resources-subtitle: STACK-X CLoud 2019
+resources-subtitle: STACK-X":" Cloud
+
+- A: 1
+  B: 2
+  C: 3
+- A: 5
+  B: 6
+  C: 7
   
 # **STACK-X: Cloud** is a half-day technology event organised by the Government Technology Agency to share government commercial cloud policy and playbook with developers and technologists from the public and private sectors.  
 # Attendees will also learn about how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
-  
-  
   
 ## **Programmes**  
 ### **STACK-X: Cloud Main Session**  
