--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -47,6 +47,6 @@ info-sections:
 # Speakers Bio Sections
 # Resources Section
 resources-title: OVERVIEW
-resources-subtitle: BREAKOUT TRACKS
+resources-subtitle: SPEAKERS' PROFILE
 resources-more-button: View the Speakers' Bio
 resources-more-button-url: /speakers-bio
