--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -47,7 +47,7 @@ info-sections:
 
 
 # Speakers Bio Sections
-# Resources Section
+# About Section
 resources-title: ABOUT
 resources-subtitle: STACK-X Cloud
 resources-description: STACK-X CLOUD is a half-day technology event organised by the Government Technology Agency to share government commercial cloud policy and playbook with developers and technologists from the public and private sectors. Attendees will also learn about how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
