--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -44,12 +44,10 @@ info-sections:
     section-more-button-url: https://rsvp.govtechstack.sg
     section-image-path: /images/breakout.png 
     
-
-
 # Speakers Bio Sections
 # About Section
-resources-title: ABOUT
-resources-subtitle: STACK-X Cloud
-resources-description: STACK-X CLOUD is a half-day technology event organised by the Government Technology Agency to share government commercial cloud policy and playbook with developers and technologists from the public and private sectors. Attendees will also learn about how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
-resources-more-button: View the Speakers' Bio
-resources-more-button-url: /speakers-bio
+programmes-title: ABOUT
+programmes-subtitle: STACK-X Cloud
+programmes-description: STACK-X CLOUD is a half-day technology event organised by the Government Technology Agency to share government commercial cloud policy and playbook with developers and technologists from the public and private sectors. Attendees will also learn about how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
+programmes-more-button: View the Speakers' Bio
+programmes-more-button-url: /speakers-bio
