--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -1,9 +1,3 @@
-##################################
-#                                #
-# Feel free to edit this file :) #
-#                                #
-##################################
-
 # Favicon
 favicon: /images/favicon-isomer.ico
 
@@ -45,8 +39,8 @@ info-sections:
     section-image-path: /images/breakout.png 
     
 # About and Speakers Bio Sections
-title: WHAT IS
-subtitle: STACK-X Cloud
-description: STACK-X CLOUD is a half-day technology event organised by the Government Technology Agency to share government commercial cloud policy and playbook with developers and technologists from the public and private sectors. Attendees will also learn about how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
-more-button: View the Speakers' Bio
-more-button-url: /speakers-bio
+resources-title: WHAT IS
+resources-subtitle: STACK-X Cloud
+resources-description: STACK-X CLOUD is a half-day technology event organised by the Government Technology Agency to share government commercial cloud policy and playbook with developers and technologists from the public and private sectors. Attendees will also learn about how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
+resources-more-button: View the Speakers' Bio
+resources-more-button-url: /speakers-bio
