--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -27,7 +27,7 @@ key-highlights:
 info-sections:
   - section-title: WHAT IS
     section-subtitle: "STACK-X: Cloud"
-    section-description: STACK-X CLOUD is a half-day technology event organised by the Government Technology Agency to share government commercial cloud policy and playbook with developers and technologists from the public and private sectors. Attendees will also learn about how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
+    section-description: "STACK-X: CLOUD" is a half-day technology event organised by the Government Technology Agency to share government commercial cloud policy and playbook with developers and technologists from the public and private sectors. Attendees will also learn about how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
     section-more-button: Participate Now
     section-more-button-url: https://rsvp.govtechstack.sg
     section-image-path: /images/breakout.png 
