--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -30,7 +30,7 @@ info-sections:
     section-description: A half-day technology event organised by the Government Technology Agency to share government commercial cloud policy and playbook with developers and technologists from the public and private sectors. Attendees will also learn about how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
     section-more-button: Participate Now
     section-more-button-url: https://rsvp.govtechstack.sg
-    section-image-path: /images/breakout.png 
+    section-image-path: /images/about.jpg 
   - section-title: ABOUT
     section-subtitle: THE PROGRAMME
     section-description: Take a look at the highlights of the event
