--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -45,7 +45,7 @@ info-sections:
     section-image-path: /images/breakout.png
     
  # Resources Section
-resources-title: Resources
-resources-subtitle: Be in the know
-resources-more-button: More Resources
-resources-more-button-url: /resource_room/
+resources-title: Are you Ready?
+resources-subtitle: RSVP TODAY
+resources-more-button: Proceed to RSVP
+resources-more-button-url: https://rsvp.govtechstack.sg
