--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -13,7 +13,7 @@ key-highlights:
     url: https://rsvp.govtechstack.sg
     external: true
   - title: Speakers' Bio
-    description: Details on our Featured Speakers 
+    description: Details of Speakers & Facilitators 
     url: /speakers-bio
   - title: Programme
     description: "STACK-X: Cloud Programme"
