--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,8 @@ custom_print_css_path: "/assets/css/print.css"
 
 exclude: [travis-script.js, .travis.yml, README.md, package.json, package-lock.json, node_modules, vendor/bundle/, vendor/cache/, vendor/gems/, vendor/ruby/, Gemfile, Gemfile.lock]
 
+is_government: false
+
 collections:
   left-nav-one:
     output: true
