--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -8,7 +8,7 @@ agency-logo: /images/isomer-logo.svg
 google-analytics: UA-82296306-1
 
 # Hero Banner
-hero-banner: /images/hero-banner.png
+hero-banner: /images/StackX-banner-service-redesign.jpg
   
 key-highlights:
   - title: Speakers' Bio
