--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -20,7 +20,7 @@ key-highlights:
     external: true
   - title: STACK 2020
     description: Call for Proposal 
-    url: /stack-2018
+    url: /stack2020-cfp
 
 # The Programme Sections
 info-sections:
