--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -2,7 +2,7 @@
 favicon: /images/favicon-isomer.ico
 
 # Agency logo
-agency-logo: /images/isomer-logo.svg
+agency-logo: /images/StackX-serviceredesign-smalllogoblack.png
 
 # Google analytics
 google-analytics: UA-82296306-1
