--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -15,12 +15,15 @@ key-highlights:
     description: Details of Speakers & Facilitators 
     url: /speakers-bio
   - title: Programme
-    description: "STACK-X: Cloud Programme"
+    description: "STACK-X: Service Redesign Programme"
     url: /
     external: true
   - title: STACK 2020
     description: Call for Proposal 
     url: /stack2020-cfp
+  - title: Past STACK-X
+    description: Cloud 
+    url: /past-stackx
 
 # The Programme Sections
 info-sections:
