--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -28,6 +28,9 @@ key-highlights:
 # The Programme Sections
 info-sections:
   - section-title: 
+    section-subtitle: COMING SOON
+    section-description: "We are excited to bring you the second event under the Stack-X umbrella. While our GovTechies plan something exciting, why not read about Stack-X: Cloud below. We will keep refreshing with latest news and information, so look out!"
+  - section-title: 
     section-subtitle: "STACK-X: Cloud"
     section-description: A half-day technology event organised by the Government Technology Agency to share government commercial cloud policy and playbook with developers and technologists from the public and private sectors. Attendees will also learn about how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
     section-more-button: Participate Now
