--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -29,7 +29,7 @@ key-highlights:
 info-sections:
   - section-title: 
     section-subtitle: COMING SOON
-    section-description: "We are excited to bring you the second event under the Stack-X umbrella. While our GovTechies plan something exciting, why not participate in our STACK 2020 Call for proposal, or read about Stack-X: Cloud below".
+    section-description: "We are excited to bring you the second event under the Stack-X umbrella. While our GovTechies plan something exciting, why not participate in our STACK 2020 Call for Proposal, or read about Stack-X: Cloud below".
   - section-title: 
     section-subtitle: "STACK-X: Cloud"
     section-description: A half-day technology event organised by the Government Technology Agency that shared about the government commercial cloud policy and playbook with developers and technologists from the public and private sectors. Attendees learned how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
