--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -21,9 +21,9 @@ key-highlights:
   - title: STACK 2020
     description: Call for Proposal 
     url: /stack2020-cfp
-  - title: Past STACK-X
-    description: Cloud 
-    url: /past-stackx
+  - title: Past Events
+    description: STACK 2018, STACK-X: Cloud 
+    url: /past-events
 
 # The Programme Sections
 info-sections:
