--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -22,17 +22,17 @@ key-highlights:
     description: Call for Proposal 
     url: /stack2020-cfp
   - title: Past Events
-    description: STACK 2018 and STACK-X Cloud 
+    description: STACK 2018 and STACK-X: Cloud 
     url: /past-events
 
 # The Programme Sections
 info-sections:
   - section-title: 
-    section-subtitle: COMING SOON
+    section-subtitle: STACK 2020, CALL FOR PROPOSAL
     section-description: "Interested to engage fellow technologists? Participate in our Call for Proposal for STACK 2020."
   - section-title: 
-    section-subtitle: "STACK-X: Cloud"
-    section-description: A half-day technology event organised by the Government Technology Agency that shared about the government commercial cloud policy and playbook with developers and technologists from the public and private sectors. Attendees learned how to deploy infrastructure-as-code, build apps and API development in the cloud environment during workshops led by GovTech engineers.
+    section-subtitle: "STACK-X: Service Reimagined"
+    section-description: A half-day technology event organised by the Government Technology Agency that shared about the design service standards and technologies with developers and technologists from the public and private sectors. Attendees learned how to utilise different tools during workshops led by GovTech engineers.
     section-image-path: /images/about.jpg 
   - section-title: 
     section-subtitle: PROGRAMME
