--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -22,7 +22,7 @@ key-highlights:
     description: Call for Proposal 
     url: /stack2020-cfp
   - title: Past Events
-    description: STACK 2018 and STACK-X: Cloud 
+    description: "STACK 2018 and STACK-X: Cloud"
     url: /past-events
 
 # The Programme Sections
