--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -12,7 +12,7 @@ hero-banner: /images/StackX-banner-service-reimagined.jpg
   
 key-highlights:
   - title: Programme
-    description: "STACK-X: Service Redesign Programme"
+    description: "STACK-X: Experience Reimagined"
     url: /
     external: true
   - title: Speakers' Bio
@@ -31,7 +31,7 @@ info-sections:
     section-subtitle: STACK 2020, CALL FOR PROPOSAL
     section-description: "Interested to engage fellow technologists? Participate in our Call for Proposal for STACK 2020."
   - section-title: 
-    section-subtitle: "STACK-X: Service Reimagined"
+    section-subtitle: "STACK-X: Experience Reimagined"
     section-description: A half-day technology event organised by the Government Technology Agency that shared about the design service standards and technologies with developers and technologists from the public and private sectors. Attendees learned how to utilise different tools during workshops led by GovTech engineers.
     section-image-path: /images/about.jpg 
   - section-title: 
