--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -28,7 +28,7 @@ key-highlights:
 # The Programme Sections
 info-sections:
   - section-title: 
-    section-subtitle: STACK 2020, CALL FOR PROPOSAL
+    section-subtitle: STACK 2020 CALL FOR PROPOSAL
     section-description: "Interested to engage fellow technologists? Participate in our Call for Proposal for STACK 2020."
     section-image-path: /images/STACK2020-Call-for-Proposal-homepage.gif
   - section-title: 
