--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -2,7 +2,7 @@
 favicon: /images/favicon-isomer.ico
 
 # Agency logo
-agency-logo: /images/GovTech-Logo-Orange.png
+agency-logo: /images/logo_govtech_hort.gif
 
 # Google analytics
 google-analytics: UA-82296306-1
