--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -30,7 +30,7 @@ info-sections:
   - section-title: 
     section-subtitle: STACK 2020 CALL FOR PROPOSAL
     section-description: "Interested to engage fellow technologists? Participate in our Call for Proposal for STACK 2020."
-    section-image-path: /images/STACK2020-Call-for-Proposal-homepage.gif
+    section-image-path: /images/STACK2020-CFP2.png
   - section-title: 
     section-subtitle: "STACK-X: Experience Reimagined"
     section-description: Gain insights into the end-to-end customer journey, and learn to tap on technologies and tools that help predict and anticipate user demands for a better user experience. Join us at STACK-X: Experience Reimagined where GovTech and industry experts will share the design thinking process behind their successful customer-centric digital services and products.
