--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "govtech-govstack",
   "version": "1.0.0",
-  "description": "## 28 MAY 2019 at Suntec Singapore Convention and Exhibition Centre, Nicoll Room 1, Level 3",
+  "description": "## SEP 2019 at Suntec Singapore Convention and Exhibition Centre",
   "main": "travis-script.js",
   "dependencies": {
     "@isomerpages/isomerpages-travisci-scripts": "^1.4.9"
