--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -43,3 +43,4 @@ info-sections:
     section-subtitle: BREAKOUT TRACKS
     section-description: Workshops and deep-dive sessions that will be lead by GovTech Engineers
     section-image-path: /images/Breakout-track-thumbnail.png
+    section-url: /images/Breakout-track-detailed.png
