--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -38,10 +38,11 @@ info-sections:
   - section-title: 
     section-subtitle: PROGRAMME
     section-description: "Overview of STACK-X: Experience Reimagined"
-    section-image-path: /images/StackX-Coming-soon.png 
+    section-image-path: /images/StackX-Coming-soon.png
+    section-more-button: More Information
   - section-title: 
     section-subtitle: BREAKOUT TRACKS
-    section-description: Workshops and deep-dive sessions that will be lead by GovTech Engineers
+    section-description: Workshops and deep-dive sessions that will be led by GovTech engineers
     section-image-path: /images/Breakout-track-thumbnail.png
     section-more-button: More Information
     section-more-button-url: /images/Breakout-track-detailed.png
