--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -9,6 +9,11 @@ google-analytics: UA-82296306-1
 
 # Hero Banner
 hero-banner: /images/StackX-banner-service-reimagined.jpg
+
+#Call to Action Button
+button:
+  - text: Sign up
+    url: https://rsvp.govtechstack.sg
   
 key-highlights:
   - title: Programme
