--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -20,11 +20,11 @@ button:
 #    description: "STACK-X: Experience Reimagined"
 #    url: /
 #    external: true
-#  - title: Speakers' Bio
+#  - title: Speaker Bio
 #    description: Details of Speakers and Facilitators
 #    url: /speakers-bio
-#  - title: STACK 2020
-#    description: Call for Proposal 
+#  - title: CALL FOR PROPOSAL
+#    description: Speak at STACK 2020 
 #    url: /stack2020-cfp
 #  - title: Past Events
 #    description: "STACK 2018 and STACK-X: Cloud"
